--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="183"
-    android:viewportHeight="140">
-  <group android:scaleX="0.42777777"
-      android:scaleY="0.3272617"
-      android:translateX="52.358334"
-      android:translateY="47.091682">
-    <group>
-      <clip-path
-          android:pathData="M20,0L163,0A20,20 0,0 1,183 20L183,120A20,20 0,0 1,163 140L20,140A20,20 0,0 1,0 120L0,20A20,20 0,0 1,20 0z"/>
-      <path
-          android:pathData="M0,0h183v140h-183z"
-          android:fillColor="#68C0F2"/>
-      <group>
-        <clip-path
-            android:pathData="M20,47L163,47A20,20 0,0 1,183 67L183,120A20,20 0,0 1,163 140L20,140A20,20 0,0 1,0 120L0,67A20,20 0,0 1,20 47z"/>
-        <path
-            android:pathData="M132.5,47C175.62,88.59 199.8,111.91 242.92,153.5H22.08C67.5,109.5 89.38,88.59 132.5,47Z"
-            android:fillColor="#172339"/>
-        <path
-            android:pathData="M26.5,66L104.88,148.5H-51.88L26.5,66Z"
-            android:fillColor="#2E3E5F"/>
-      </group>
-      <path
-          android:pathData="M41,32m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"
-          android:fillColor="#FFC805"/>
-    </group>
-  </group>
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <path
+      android:pathData="M42.2,35.9h23.5c4.1,0 7.5,3.3 7.5,7.5V67c0,4.1 -3.4,7.5 -7.5,7.5H42.2c-4.1,0 -7.5,-3.3 -7.5,-7.5V43.4C34.7,39.3 38.1,35.9 42.2,35.9z"
+      android:fillColor="#68A4F2"/>
+  <path
+      android:pathData="M66,74.5l-16.6,0c-3.6,0 -5.4,-4.4 -2.8,-6.9c4.6,-4.4 8.3,-8 13.3,-12.8c1.6,-1.5 4.1,-1.5 5.6,0c2.9,2.8 5.4,5.2 7.8,7.5l0,4.9C73.3,71.2 70,74.5 66,74.5z"
+      android:fillColor="#172339"/>
+  <path
+      android:pathData="M40.2,44.9c0,-2 1.6,-3.6 3.6,-3.6s3.6,1.6 3.6,3.6s-1.6,3.6 -3.6,3.6S40.2,46.9 40.2,44.9"
+      android:fillColor="#FFC005"/>
+  <path
+      android:pathData="M34.7,67.1c0,4.1 3.3,7.4 7.4,7.4H49h7.8l-8.3,-8.7l-5.7,-6c-1.4,-1.4 -3.7,-1.4 -5.1,0L34.7,63V67.1z"
+      android:fillColor="#2E3E5F"/>
 </vector>
