--- a/app/src/main/res/drawable/ic_launcher_foreground_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground_monochrome.xml
@@ -1,18 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="432"
-    android:viewportHeight="432">
+    android:viewportWidth="108"
+    android:viewportHeight="108">
     <path
-        android:fillColor="#000000"
-        android:pathData="M138.5,147.2c-4.9,1.7 -9.2,5.5 -11.4,10.1 -2,4.2 -2.1,5.7 -2.1,43.3l0.1,38.9 13.2,-13.9 13.2,-13.8 16.9,17.8c9.3,9.9 18.6,19.7 20.7,21.8l3.7,3.9 28.9,-27.8c15.8,-15.4 30.4,-29.4 32.4,-31.2l3.6,-3.4 18.4,17.7c10.1,9.8 21.5,20.7 25.2,24.3l6.8,6.6 -0.3,-41.2 -0.3,-41.1 -3,-4.3c-1.6,-2.3 -5,-5.3 -7.4,-6.6l-4.4,-2.3 -75.6,0.1c-50,-0 -76.6,0.4 -78.6,1.1zM174.1,165.3c9.6,6.4 9,20.9 -1.1,25.9 -10.5,5.3 -22,-1.9 -22,-13.8 0,-11.1 13.8,-18.4 23.1,-12.1z"
-        android:strokeColor="#00000000" />
+        android:fillAlpha="0.2"
+        android:pathData="M42.2,35.9h23.5c4.1,0 7.5,3.3 7.5,7.5V67c0,4.1 -3.4,7.5 -7.5,7.5H42.2c-4.1,0 -7.5,-3.3 -7.5,-7.5V43.4C34.7,39.3 38.1,35.9 42.2,35.9z"
+        android:fillColor="#68A4F2"/>
     <path
-        android:fillColor="#000000"
-        android:pathData="M228.5,232.3c-15.9,15.4 -29.1,28.3 -29.3,28.7 -0.1,0.4 5,6.2 11.4,12.9l11.7,12.2 35.6,-0.3c39.5,-0.3 38.7,-0.2 44.9,-7.2 4.1,-4.7 5.4,-9.5 5,-18.5l-0.3,-7.4 -25,-24.2 -25,-24.2 -29,28z"
-        android:strokeColor="#00000000" />
+        android:fillAlpha="0.7"
+        android:pathData="M66,74.5l-16.6,0c-3.6,0 -5.4,-4.4 -2.8,-6.9c4.6,-4.4 8.3,-8 13.3,-12.8c1.6,-1.5 4.1,-1.5 5.6,0c2.9,2.8 5.4,5.2 7.8,7.5l0,4.9C73.3,71.2 70,74.5 66,74.5z"
+        android:fillColor="#172339"/>
     <path
-        android:fillColor="#000000"
-        android:pathData="M138.2,237.9l-13.2,13.9 0,8.9c0,10.3 1.8,15.2 7.3,20 5.6,4.9 10.2,5.5 46,5.1l31.7,-0.3 -25.5,-27c-14.1,-14.9 -27.3,-28.7 -29.4,-30.8l-3.7,-3.8 -13.2,14z"
-        android:strokeColor="#00000000" />
+        android:fillAlpha="0.8"
+        android:pathData="M40.2,44.9c0,-2 1.6,-3.6 3.6,-3.6s3.6,1.6 3.6,3.6s-1.6,3.6 -3.6,3.6S40.2,46.9 40.2,44.9"
+        android:fillColor="#FFC005"/>
+    <path
+        android:fillAlpha="1"
+        android:pathData="M34.7,67.1c0,4.1 3.3,7.4 7.4,7.4H49h7.8l-8.3,-8.7l-5.7,-6c-1.4,-1.4 -3.7,-1.4 -5.1,0L34.7,63V67.1z"
+        android:fillColor="#2E3E5F"/>
 </vector>
